@@ -1,6 +1,5 @@
 package io.stargate.sgv2.jsonapi.service.embedding.operation;
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.databind.JsonNode;
 import io.quarkus.rest.client.reactive.ClientExceptionMapper;
 import io.quarkus.rest.client.reactive.QuarkusRestClientBuilder;
@@ -14,66 +13,65 @@ import io.stargate.sgv2.jsonapi.service.embedding.operation.error.HttpResponseEr
 import io.stargate.sgv2.jsonapi.service.embedding.util.EmbeddingUtil;
 import jakarta.ws.rs.HeaderParam;
 import jakarta.ws.rs.POST;
-import jakarta.ws.rs.Path;
-import jakarta.ws.rs.PathParam;
 import java.net.URI;
 import java.time.Duration;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
-import java.util.stream.Collectors;
 import org.eclipse.microprofile.rest.client.annotation.ClientHeaderParam;
 import org.eclipse.microprofile.rest.client.annotation.RegisterProvider;
 import org.eclipse.microprofile.rest.client.inject.RegisterRestClient;
 
-public class VertexAIEmbeddingClient implements EmbeddingProvider {
+public class HuggingFaceDedicatedEmbeddingClient implements EmbeddingProvider {
   private EmbeddingProviderConfigStore.RequestProperties requestProperties;
-  private String modelName;
-  private final VertexAIEmbeddingProvider embeddingProvider;
+  private final HuggingFaceDedicatedEmbeddingProvider embeddingProvider;
+  private Map<String, Object> vectorizeServiceParameters;
 
-  public VertexAIEmbeddingClient(
+  public HuggingFaceDedicatedEmbeddingClient(
       EmbeddingProviderConfigStore.RequestProperties requestProperties,
       String baseUrl,
       String modelName,
       int dimension,
-      Map<String, Object> serviceParameters) {
+      Map<String, Object> vectorizeServiceParameters) {
     this.requestProperties = requestProperties;
-    this.modelName = modelName;
-    String actualUrl = EmbeddingUtil.replaceParameters(baseUrl, serviceParameters);
+    this.vectorizeServiceParameters = vectorizeServiceParameters;
+    // replace placeholders: endPointName, regionName, cloudName
+    String dedicatedApiUrl = EmbeddingUtil.replaceParameters(baseUrl, vectorizeServiceParameters);
     embeddingProvider =
         QuarkusRestClientBuilder.newBuilder()
-            .baseUri(URI.create(actualUrl))
+            .baseUri(URI.create(dedicatedApiUrl))
             .readTimeout(requestProperties.readTimeoutMillis(), TimeUnit.MILLISECONDS)
-            .build(VertexAIEmbeddingProvider.class);
+            .build(HuggingFaceDedicatedEmbeddingProvider.class);
   }
 
   @RegisterRestClient
   @RegisterProvider(EmbeddingProviderResponseValidation.class)
-  public interface VertexAIEmbeddingProvider {
+  public interface HuggingFaceDedicatedEmbeddingProvider {
     @POST
-    @Path("/{modelId}:predict")
     @ClientHeaderParam(name = "Content-Type", value = "application/json")
     Uni<EmbeddingResponse> embed(
-        @HeaderParam("Authorization") String accessToken,
-        @PathParam("modelId") String modelId,
-        EmbeddingRequest request);
+        @HeaderParam("Authorization") String accessToken, EmbeddingRequest request);
 
     @ClientExceptionMapper
     static RuntimeException mapException(jakarta.ws.rs.core.Response response) {
       String errorMessage = getErrorMessage(response);
       return HttpResponseErrorMessageMapper.mapToAPIException(
-          ProviderConstants.VERTEXAI, response, errorMessage);
+          ProviderConstants.HUGGINGFACE_DEDICATED, response, errorMessage);
     }
 
     /**
-     * TODO: Add customized error message extraction logic here. <br>
      * Extract the error message from the response body. The example response body is:
      *
      * <pre>
+     * {
+     *   "message": "Batch size error",
+     *   "type": "validation"
+     * }
      *
+     * {
+     *   "message": "Model is overloaded",
+     *   "type": "overloaded"
+     * }
      * </pre>
      *
      * @param response The response body as a String.
@@ -86,75 +84,22 @@ public class VertexAIEmbeddingClient implements EmbeddingProvider {
       logger.info(
           String.format(
               "Error response from embedding provider '%s': %s",
-              ProviderConstants.VERTEXAI, rootNode.toString()));
-      return rootNode.toString();
+              ProviderConstants.HUGGINGFACE_DEDICATED, rootNode.toString()));
+      // Extract the "message" node
+      JsonNode messageNode = rootNode.path("message");
+      // Return the text of the "message" node, or the whole response body if it is missing
+      return messageNode.isMissingNode() ? rootNode.toString() : messageNode.toString();
     }
   }
 
-  private record EmbeddingRequest(List<Content> instances) {
-    public record Content(String content) {}
-  }
+  // huggingfaceDedicated, Test Embeddings Inference, openAI compatible route
+  // https://huggingface.github.io/text-embeddings-inference/#/Text%20Embeddings%20Inference/openai_embed
+  private record EmbeddingRequest(String[] input) {}
 
-  private static class EmbeddingResponse {
-    public EmbeddingResponse() {}
+  private record EmbeddingResponse(String object, Data[] data, String model, Usage usage) {
+    private record Data(String object, int index, float[] embedding) {}
 
-    private List<Prediction> predictions;
-
-    @JsonIgnore private Object metadata;
-
-    public List<Prediction> getPredictions() {
-      return predictions;
-    }
-
-    public void setPredictions(List<Prediction> predictions) {
-      this.predictions = predictions;
-    }
-
-    public Object getMetadata() {
-      return metadata;
-    }
-
-    public void setMetadata(Object metadata) {
-      this.metadata = metadata;
-    }
-
-    protected static class Prediction {
-      public Prediction() {}
-
-      private Embeddings embeddings;
-
-      public Embeddings getEmbeddings() {
-        return embeddings;
-      }
-
-      public void setEmbeddings(Embeddings embeddings) {
-        this.embeddings = embeddings;
-      }
-
-      protected static class Embeddings {
-        public Embeddings() {}
-
-        private float[] values;
-
-        @JsonIgnore private Object statistics;
-
-        public float[] getValues() {
-          return values;
-        }
-
-        public void setValues(float[] values) {
-          this.values = values;
-        }
-
-        public Object getStatistics() {
-          return statistics;
-        }
-
-        public void setStatistics(Object statistics) {
-          this.statistics = statistics;
-        }
-      }
-    }
+    private record Usage(int prompt_tokens, int total_tokens) {}
   }
 
   @Override
@@ -163,11 +108,11 @@ public class VertexAIEmbeddingClient implements EmbeddingProvider {
       List<String> texts,
       Optional<String> apiKeyOverride,
       EmbeddingRequestType embeddingRequestType) {
-    EmbeddingRequest request =
-        new EmbeddingRequest(texts.stream().map(t -> new EmbeddingRequest.Content(t)).toList());
-    Uni<EmbeddingResponse> serviceResponse =
+    String[] textArray = new String[texts.size()];
+    EmbeddingRequest request = new EmbeddingRequest(texts.toArray(textArray));
+    Uni<EmbeddingResponse> response =
         embeddingProvider
-            .embed("Bearer " + apiKeyOverride.get(), modelName, request)
+            .embed("Bearer " + apiKeyOverride.get(), request)
             .onFailure(
                 throwable -> {
                   return ((throwable.getCause() != null
@@ -181,18 +126,16 @@ public class VertexAIEmbeddingClient implements EmbeddingProvider {
                 Duration.ofMillis(requestProperties.maxBackOffMillis()))
             .withJitter(requestProperties.jitter())
             .atMost(requestProperties.atMostRetries());
-    ;
-    return serviceResponse
+    return response
         .onItem()
         .transform(
-            response -> {
-              if (response.getPredictions() == null) {
+            resp -> {
+              if (resp.data() == null) {
                 return Response.of(batchId, Collections.emptyList());
               }
+              Arrays.sort(resp.data(), (a, b) -> a.index() - b.index());
               List<float[]> vectors =
-                  response.getPredictions().stream()
-                      .map(prediction -> prediction.getEmbeddings().getValues())
-                      .collect(Collectors.toList());
+                  Arrays.stream(resp.data()).map(data -> data.embedding()).toList();
               return Response.of(batchId, vectors);
             });
   }
